# yes_db

./: .gitignore  HOW_TO_PUBLISH.txt  MANIFEST.in  README.md  SECURITY.md  performance.py  pyproject.toml  readME.md  setup.cfg  setup.py  test.cdb
.github/: PULL_REQUEST_TEMPLATE.md
chidb/: __init__.py  api.py  btree.py  client.py  dbm.py  log.py  pager.py  record.py  schema.py  security.py  util.py
chidb/cli/: cloud.py  shell.py
chidb/sql/: codegen.py  lexer.py  optimizer.py  parser.py
deploy/: nginx.conf  setup.sh  yesdb.service
server/: __init__.py  auth.py  config.py  main.py  requirements.txt
tests/: test_api.py  test_btree.py  test_cli_cloud.py  test_client.py  test_codgen.py  test_connect.py  test_dbm.py  test_log.py  test_optimizer.py  test_pager.py  test_record.py  test_schema.py  test_server_auth.py  test_server_config.py  test_server_main.py  test_shell.py  test_sql.py  test_util.py
yesdb/: __init__.py
