[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yesdb"
version = "0.1.6"
description = "A lightweight, relational database built from scratch in Python"
readme = "README.md"
authors = [
    {name = "Azhar", email = "azhar.takoy@strathmore.edu"}
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["database", "sql", "btree", "educational", "embedded-database", "baas", "cloud"]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
cloud = [
    "requests>=2.28",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "flake8>=6.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/AzharAhmed-bot/yesdb"  # Update with your repo
Documentation = "https://github.com/AzharAhmed-bot/yesdb#readme"
Repository = "https://github.com/AzharAhmed-bot/yesdb"
Issues = "https://github.com/AzharAhmed-bot/yesdb/issues"

[project.scripts]
yesdb = "chidb.cli.cloud:main"
yesdb-local = "chidb.cli.shell:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chidb*", "yesdb*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
chidb = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
