[metadata]
name = yesdb
version = 0.1.2
author = Azhar
author_email = azhar.takoy@strathmore.edu
description = A lightweight, educational relational database built from scratch in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AzharAhmed-bot/yesdb
project_urls =
    Documentation = https://github.com/AzharAhmed-bot/yesdb#readme
    Source = https://github.com/AzharAhmed-bot/yesdb
    Issues = https://github.com/AzharAhmed-bot/yesdb/issues
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database
    Topic :: Education
    Topic :: Software Development :: Libraries :: Python Modules
keywords = database, sql, btree, educational, embedded-database

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

[options.packages.find]
include = chidb*
exclude = tests*

[options.entry_points]
console_scripts =
    yesdb = chidb.cli.shell:main
